Fixes #24348: Odd spacing with filters elements in node search page

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-groups.css
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-groups.css
@@ -128,9 +128,6 @@ content-query{
 .rudder-form.form-sm{
   margin-bottom: 12px;
 }
-.searchNodes {
-  margin-top: 15px;
-}
 #ajaxItemContainer > form{
   height: 100%;
 }
