--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-node.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-node.scss
@@ -55,12 +55,6 @@ $node-state-size: 14px;
   }
 }
 
-#queryParameters{
-  padding: 0 15px;
-}
-#submitSearch{
-  margin-bottom: 15px;
-}
 .rudder_col>.portlet{
   padding: 0 !important;
 }
